Fix - IE Edge wrapping on Licensing form

--- a/web/themes/custom/hm-public-theme/static/sass/shared/forms/_forms.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/shared/forms/_forms.scss
@@ -13,6 +13,15 @@
 }
 
 //Form Containers
+#edit-first-page,
+#edit-volunteer-step-2,
+#edit-step3 {
+  @extend %max-width;
+  @extend %default-gutter-width;
+  margin: 0 auto;
+  width: 100%;
+}
+
 .webform-submission-form.webform-submission-add-form.webform-submission-basicmaker-membership-flow-form.webform-submission-basicmaker-membership-flow-add-form,
 #checkoutprogress,
 .webform-progress {
@@ -204,7 +213,7 @@ input[type='radio']:checked + label:after {
   margin-bottom: 5px;
 }
 
-input[type='checkbox']:checked + label, 
+input[type='checkbox']:checked + label,
 input[type='radio']:checked + label {
   color: color(quaternary);
 }
